Add graph loading

--- a/src/main/resources/config.json
+++ b/src/main/resources/config.json
@@ -1,5 +1,6 @@
 {
   "floorsPath": "/Users/almin/Documents/projects/master/resources/final-nigl/compressed.tiff",
   "walkRecordingPath": "/Users/almin/Documents/projects/master/resources/final-nigl/FH2F4CCL_11202421.03.2016.txt",
+  "buildingGraphPath": "/Users/almin/Documents/projects/master/resources/graph.json",
   "positioningType": "FILTERED_POSITIONING"
 }
