--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.1'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.7.2'
+    compile "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.+"
     compile group: 'com.twelvemonkeys.imageio', name: 'imageio-core', version: '3.3.2'
     compile group: 'com.twelvemonkeys.imageio', name: 'imageio-tiff', version: '3.3.2'
     compile group: 'com.twelvemonkeys.imageio', name: 'imageio-jpeg', version: '3.3.2'
