--- a/src/main/resources/settings.json
+++ b/src/main/resources/settings.json
@@ -1,8 +1,8 @@
 {
-  "floorsPath": "/Users/almin/Documents/projects/master/resources/building_plan.tiff",
-  "buildingPath": "/Users/almin/Documents/projects/master/resources/building.json",
-  "walkRecordingPath": "/Users/almin/Documents/projects/master/resources/new-data-recordings/FH2_Floor4_2019-03-11.txt",
-  "routePath": "/Users/almin/Documents/projects/master/resources/new-data-recordings/waypoints/FH2-Floor-4-Waypoints.json",
-  "buildingGraphPath": "/Users/almin/Documents/projects/master/resources/graph.json",
+  "floorsPath": "app-resources/building_plan.tiff",
+  "buildingPath": "app-resources/building.json",
+  "walkRecordingPath": "app-resources/recordings/FH2_Floor4_2019-03-11.json",
+  "routePath": "app-resources/waypoints/FH2-Floor-4-Waypoints.json",
+  "buildingGraphPath": "app-resources/graph.json",
   "positioningType": "Graphed"
 }
